@@ -4,7 +4,7 @@ import java.text.ParseException;
 import java.util.Locale;
 
 public class ConversorNumerico {
-    private static final NumberFormat format = NumberFormat.getInstance(new Locale("pt", "BR"));
+    private static final NumberFormat format = NumberFormat.getInstance(Locale.of("pt", "BR"));
 
     public static double converterParaDouble(String valor) throws ParseException {
         if (valor == null || valor.trim().isEmpty()) {
